force-app/main/default/objects/Exam_Summary__c/Exam_Summary__c.object-meta.xml
<CustomObject>
    <description>This is the newer object to replace Exam Results Summary</description>
    <label>Exam Summary</label>
    <nameField>
        <displayFormat>ES-{00000}</displayFormat>
        <label>Exam Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>