force-app/main/default/objects/Exam_Summary__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>