force-app/main/default/objects/Exam_Summary__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <label>Max Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>