force-app/main/default/objects/Exam_Summary__c/fields/Min_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Score__c</fullName>
    <label>Min Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>